--- a/Homework04/css/style.css
+++ b/Homework04/css/style.css
@@ -115,11 +115,72 @@ body {
     height: 7px;
     margin: 0 auto;
     margin-top: 32px;
-    margin-bottom: 92px; 
+    margin-bottom: 62px; 
     background-color: #1abc9c;
  }
 
  .galery-list {
+    display: block;
+    margin: 0;
+    margin-bottom: 104px;
+    padding: 0;
+ }
+
+ .galery-list-item {
+    width: 255px;
+    height: 322px;
+    float: left;
+    margin-right: 30px;
+    margin-top: 30px;
+    background: #e9f0fd;
+    cursor: pointer;
+    box-shadow: 2px 2px 2px 2px hsla(0, 0%, 0%, .2);
+  }
+
+  .galery-list-item:nth-child(4n) {
+    margin-right: 0px;
+}
+  
+  .galery-list-image-wrapp {
+    overflow: hidden;
+    height: 283px;
+    line-height: 238px;
+    text-align: center;
+  }
+  
+  .galery-list-image {
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .galery-list-name-wrapp {
+    height: calc(322px - 283px);
+    line-height: calc(322px - 283px);
+    background: #323232;
+    overflow: hidden;
+    color: #fff;
+    font-size: 18px;
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    transition-duration: 0.3s;
+  }
+  .galery-list-name {
+    padding-left: 14px;
+  }
+  .galery-list-price {
+    float: right;
+    background: #8c8c8c;
+    padding: 0 12px;
+    transition-duration: 0.3s;
+  }
+  .galery-list-item:hover .galery-list-name-wrapp {
+    background: #1abc9c;
+  }
+  .galery-list-item:hover .galery-list-price {
+    background: #7fd9c7;
+  }
+  
+
+ /* .galery-list {
     display: block;
     margin: 0;
     margin-bottom: 104px;
@@ -204,7 +265,7 @@ body {
     z-index: 2;
     background-color: #8c8c8c;
     color: #ffffff;
-}
+} */
 
  /* blog part */
 
@@ -295,9 +356,3 @@ body {
     background-color: #4ec6ab;
     list-style: none;
 }
-
-
-
-
-
-
