--- a/Homework05/css/style.css
+++ b/Homework05/css/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
     font-family: 'Roboto', sans-serif;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background: rgb(255, 255, 255);
     font-size: 14px;
     line-height: 26px;
