--- a/Homework08/css/style.css
+++ b/Homework08/css/style.css
@@ -12,8 +12,8 @@ html {
   font-style: normal;
   font-weight: 400;
   src: local('Montserrat Regular'), local('Montserrat-Regular'),
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework08/fonts/montserrat-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework08/fonts/montserrat-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/montserrat-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/montserrat-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
 }
 /* montserrat-700 - latin */
 @font-face {
@@ -21,8 +21,8 @@ html {
   font-style: normal;
   font-weight: 700;
   src: local('Montserrat Bold'), local('Montserrat-Bold'),
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework08/fonts/montserrat-v14-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework08/fonts/montserrat-v14-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/montserrat-v14-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/montserrat-v14-latin-700.woff') format('woff'), /* Modern Browsers */
 }
 
 /* roboto-300 - latin */
@@ -31,8 +31,8 @@ html {
   font-style: normal;
   font-weight: 300;
   src: local('Roboto Light'), local('Roboto-Light'),
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework08/fonts/roboto-v20-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework08/fonts/roboto-v20-latin-300.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/roboto-v20-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/roboto-v20-latin-300.woff') format('woff'), /* Modern Browsers */
 }
 
 /* roboto-regular - latin */
@@ -41,8 +41,7 @@ html {
   font-style: normal;
   font-weight: 400;
   src: local('Roboto'), local('Roboto-Regular'),
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework08/fonts/roboto-v20-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework08/fonts/roboto-v20-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/roboto-v20-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
 }
 
 
@@ -55,18 +54,25 @@ body {
 }
 
 .contaner {
-  width: 320px;
+  
   margin: 0 auto;
   padding: 0 15px;
 }
 
 /* header */
 
+.container-fluid {
+  height: 540px;
+  background-image: 
+    linear-gradient(to bottom, hsla(0,0%,0%,.2), hsla(0,0%,0%,.3)),
+    url(../img/BGImg320540.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .background-wrapper {
   width: 320px;
   margin: 0 auto;
-  background-image: url(../img/BGImg320540.jpg);
-  background-repeat: no-repeat;
 }
 
 /* site-navigation */
