--- a/Homework07/css/style.css
+++ b/Homework07/css/style.css
@@ -12,8 +12,8 @@ html {
   font-style: normal;
   font-weight: 400;
   src: local('Montserrat Regular'), local('Montserrat-Regular'),
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework07/fonts/montserrat-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework07/fonts/montserrat-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/montserrat-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/montserrat-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
 }
 /* montserrat-700 - latin */
 @font-face {
@@ -21,8 +21,8 @@ html {
   font-style: normal;
   font-weight: 700;
   src: local('Montserrat Bold'), local('Montserrat-Bold'),
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework07/fonts/montserrat-v14-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework07/fonts/montserrat-v14-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/montserrat-v14-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/montserrat-v14-latin-700.woff') format('woff'), /* Modern Browsers */
 }
 
 /* roboto-slab-regular - latin */
@@ -31,8 +31,8 @@ html {
   font-style: normal;
   font-weight: 400;
   src: local('Roboto Slab Regular'), local('RobotoSlab-Regular'),
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework07/fonts/roboto-slab-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework07/fonts/roboto-slab-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/roboto-slab-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/roboto-slab-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
 }
 
 /* gentium-book-basic-italic - latin */
@@ -41,8 +41,8 @@ html {
   font-style: italic;
   font-weight: 400;
   src: local('Gentium Book Basic Italic'), local('GentiumBookBasic-Italic'),
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework07/fonts/gentium-book-basic-v10-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/Users/filianov/Documents/GoITHomeworks/goit-fe-course/Homework07/fonts/gentium-book-basic-v10-latin-italic.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/gentium-book-basic-v10-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/gentium-book-basic-v10-latin-italic.woff') format('woff'), /* Modern Browsers */
 }
 
 
@@ -55,7 +55,7 @@ body {
 }
 
 body {
-  width: 1400px;
+  /* width: 1400px; */
   margin: 0 auto;
 }
 
@@ -211,10 +211,20 @@ body {
 
 .contact-us-form-wrapper {
   position: relative;
+  background-position: cover;
   background-color: #222222;
+  /* background-image: url(../img/icons/Map\ Image614537.png);
+  background-repeat: no-repeat;
+  background-position: right; */
+}
+
+.image-overlay {
+  /* position: absolute; */
+  /* background-color: #222222; */
   background-image: url(../img/icons/Map\ Image614537.png);
   background-repeat: no-repeat;
   background-position: right;
+  background-position: cover;
 }
 
 .title-form{
